Add a resources sections
Adds a resources section to publish links towards relevant articles
regarding Vision Zero, Urban design, Tools, etc.

Drive-by:
* Add editorconfig configuration file

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,10 @@ nav:
     - Keeping your branch up-to-date: 'guides/update-branch.md'
   - Learning:
     - Learning resources: 'learning/learning.md'
+  - Resources:
+    - Design: resources/design.md
+    - Statistics: resources/statistics.md
+    - Tools: resources/tools.md
 
 theme:
   name: material
