Add other cities resource page
Add a new resource page containing information about what other cities
do for vision zero.

Drive-by:
* Reorganizes the pages and sections to make it look less like a
  technical documentation website.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,14 +3,14 @@ nav:
   - Home:
     - index.md
     - How it works: how-it-works.md
-  - Guides:
-    - Keeping your branch up-to-date: 'guides/update-branch.md'
-  - Learning:
-    - Learning resources: 'learning/learning.md'
   - Resources:
     - Design: resources/design.md
+    - Other Cities: resources/other-cities.md
     - Statistics: resources/statistics.md
     - Tools: resources/tools.md
+  - Contributor zone:
+    - Learning resources: 'learning/learning.md'
+    - Keeping your branch up-to-date: 'guides/update-branch.md'
 
 theme:
   name: material
