Add a contributors page
Adds a "contributors" to the main section to thank all the people who
helped improving the project.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,7 @@ nav:
   - Home:
     - index.md
     - How it works: how-it-works.md
+    - Contributors: contributors.md
   - Resources:
     - Design: resources/design.md
     - Other Cities: resources/other-cities.md
