Add a "Who is using us" page
Adds a page showcasing who is using ScrAPD and what they did with it.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,8 +2,9 @@ site_name: ScrAPD
 nav:
   - Home:
     - index.md
-    - How it works: how-it-works.md
-    - Contributors: contributors.md
+    - how-it-works.md
+    - contributors.md
+    - who-is-using-us.md
   - Resources:
     - Design: resources/design.md
     - Other Cities: resources/other-cities.md
