Add Windows documentation addressing changes requested

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
     - Learning resources: 'learning/learning.md'
     - Developer setup: 'learning/developer.md'
     - Keeping your branch up-to-date: 'guides/update-branch.md'
+    - Installing Python 3 on Windows 10: 'guides/install-python-win.md'
 
 theme:
   name: material
